+ add separate features for 'Party Join and Leave messages'
+ add formatter for bingoparty commands
= fix stuff related to 'Community Goal Display'